--- a/style.css
+++ b/style.css
@@ -1,76 +1,94 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-body {
-    background: #FFEDD5;
-    color: #2D2C2A;
-}
-
-header {
-    text-align: center;
-    padding: 32px 0;
-}
-
-header h1 {
-  font-size: 32px;
-  font-weight: 700;  
-  margin-bottom: 4px;
-  font-family: 'Roboto Serif', serif;
-  font-weight: 700;
-}
-
-header h1 span {
-    color: #995000;
-}
-
-p {
-    font-size: 14px;
-    font-family: 'Roboto', sans-serif;
-    font-weight: 400;
-}
-
-header,
-section {
-    max-width: 300px;
-    margin: 0 auto;
-}
-
-section {
-    margin-bottom: 24px;
-}
-
-section h2 {
-    background: #FED7AA;
-    padding: 8px 16px;
-    text-align: center;
-    margin-bottom: 24px;
-    font-size: 18px;
+:root {
+    --backgrond: #FFEDD5;
+    --text-color: #2D2C2A;
+    --span-color: #995000;
+    --section-color: #FED7AA;
+  }
+  
+  * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+  }
+  
+  body {
+      background: var(--backgrond);
+      color: var(--text-color);
+  }
+  
+  body::-webkit-scrollbar {
+      width: 8px;
+  }
+  
+  body::-webkit-scrollbar-track {
+      background: var(--section-color);
+    }
+    
+    body::-webkit-scrollbar-thumb {
+      background-color: var(--span-color);
+      border-radius: 20px;
+    }
+  
+  header {
+      text-align: center;
+      padding: 32px 0;
+  }
+  
+  header h1 {
+    font-size: 32px;
+    font-weight: 700;  
+    margin-bottom: 4px;
     font-family: 'Roboto Serif', serif;
     font-weight: 700;
-}
-
-ul {
-    list-style: none;
-}
-
-ul  li {
-    margin-bottom: 16px;
-    display: flex;
-    font-family: 'Roboto Serif', serif;
-    font-weight: 700;
-    font-size: 16px;
-}
-
-li .details {
-    max-width: 240px;
-}
-
-.details h3 {
-    margin-bottom: 8px;
-}
-
-
-
+  }
+  
+  header h1 span {
+      color: var(--span-color);
+  }
+  
+  p {
+      font-size: 14px;
+      font-family: 'Roboto', sans-serif;
+      font-weight: 400;
+  }
+  
+  header,
+  section {
+      max-width: 300px;
+      margin: 0 auto;
+  }
+  
+  section {
+      margin-bottom: 24px;
+  }
+  
+  section h2 {
+      background: var(--section-color);
+      padding: 8px 16px;
+      text-align: center;
+      margin-bottom: 24px;
+      font-size: 18px;
+      font-family: 'Roboto Serif', serif;
+      font-weight: 700;
+  }
+  
+  ul {
+      list-style: none;
+  }
+  
+  ul  li {
+      margin-bottom: 16px;
+      display: flex;
+      font-family: 'Roboto Serif', serif;
+      font-weight: 700;
+      font-size: 16px;
+  }
+  
+  li .details {
+      max-width: 240px;
+  }
+  
+  .details h3 {
+      margin-bottom: 8px;
+  }
+    
